Fixes #165
and a few other little things including moving the hub cogs back into nav and fixing Erics changes:
- Lighten the grey on the circles for the feature icons- line up social icons in footer with links/text- the explore more buttons are unreadable. It's the right background colour for that slide, but need to be able to read the buttons.- the newsletter popup displays for a second and then shows terms instead- all the corporate site pages need the new hero image style for consistency.- pricing page is missing text at bottom. as well as the sub heading text. both were on the google doc. will also need the form for requesting freebies page once that text is in

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -47,6 +47,7 @@
     Members
     Pricing
     Entry View
+    Footer
 *****************************************************/
 
 /** Globals
@@ -7554,9 +7555,6 @@ section {
 }
 
 #coop, #pricing {
-	h2, p {
-		color:#fff;
-	}
 	h2 {
 		font-size:32px;
 	}
@@ -8028,3 +8026,17 @@ $color-green: #9AE14F;
   display: block;
   text-align: center;
 }
+
+/**
+ * Footer region
+ * 
+ **/
+
+ #footer {
+  background-color:black;
+  -webkit-font-smoothing:antialiased;
+  -moz-osx-font-smoothing:grayscale;
+  .socials {
+    margin-top:-7px;
+  }
+ }
